<resources>
    <string name="app_name">NEB NEPAL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NEB NEPAL</string>
    <string name="nav_header_subtitle">coderlax@.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Class 11</string>
    <string name="menu_gallery">Class 12</string>
    <string name="menu_slideshow">Exit</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Share</string>
    <string name="menu_accounts">About Us</string>
</resources>
